<resources>
    <string name="app_name">JBNU-CH</string>
    <string name="txt_welcome">Hello!</string>
    <string name="txt_signIn_description">You need to sign-in to continue.</string>
    <string name="txt_email">E-Mail</string>
    <string name="txt_password">Password</string>
    <string name="txt_signIn">Sign In</string>
    <string name="txt_resetPassword">Forgot Password?</string>
    <string name="txt_signUp">Sign Up</string>
    <string name="txt_nextStep">Next</string>
    <string name="txt_privacyLicense">JBNU CH Application Privacy Policy</string>
    <string name="txt_read">Read</string>
    <string name="txt_EULA">JBNU CH Application End User License</string>
    <string name="txt_checkPassword">Check Password</string>
    <string name="txt_toolbarTitle">ToolbarTitle</string>
    <string name="txt_register">Sign Up</string>
    <string name="txt_requestUserInfo">Please enter your information.</string>
    <string name="txt_name">Name</string>
    <string name="txt_studentNo">Student No.</string>
    <string name="txt_phone">Phone Number</string>
    <string name="txt_requestSelectCollege">Please select your college.</string>
    <string name="txt_requestToLoadIDCard">Please Load your Student ID Image.</string>
    <string name="txt_load">Load</string>
    <string name="txt_legacyUser_contents">JBNU COE App is now integrated with the JBNU CH App.\nPress the button below to transfer your data to continue using the service without a separate subscription!"</string>
    <string name="txt_legacyUser_title">Were you a user of JBNU COE App?</string>
    <string name="txt_transferData">Transfer Data</string>
    <string name="txt_removeData">Remove Data</string>
    <string name="txt_nameWithColon">Name :</string>
    <string name="txt_deptWithColon">Dept :</string>
    <string name="txt_studentNoWithColon">Student No. :</string>
    <string name="txt_phoneWithColon">Phone :</string>
    <string name="txt_title_convertData">Transfer Data</string>
    <string name="txt_contents_convertData">Please check if your information is correct.</string>
    <string name="txt_checkEmail">Check your E-Mail!</string>
    <string name="txt_switchToSignIn">Go to Sign-In View.</string>
    <string name="txt_openEmail">Open E-Mail</string>
    <string name="txt_home">Home</string>
    <string name="txt_affiliates">Affiliates</string>
    <string name="txt_timeTable">Time Table</string>
    <string name="txt_notice">Notice</string>
    <string name="txt_more">More</string>
    <string name="txt_noticeType_StudentAssociation">Student Council</string>
    <string name="txt_noticeType_Internal">Internal Notice</string>
    <string name="txt_feedbackHub">Feedback Hub</string>
    <string name="txt_sentFeedback">Sent Feedback</string>
    <string name="txt_allFeedbacks">All Feedback</string>
    <string name="txt_others">Others</string>
    <string name="txt_App">App</string>
    <string name="txt_festival">Event</string>
    <string name="txt_pledges">Pledge</string>
    <string name="txt_communicate">Communication</string>
    <string name="txt_welfare">Welfare</string>
    <string name="txt_facility">Facility</string>
    <string name="txt_sendFeedback">Send Feedback</string>
    <string name="txt_collegeStudentAssociation">College Student Council</string>
    <string name="txt_start_petition">Start petition system</string>
    <string name="txt_description_petition">The petition system is a system in which students can freely present their policies and opinions.\nThe comments posted will be discussed with the Central Steering Committee and the University Headquarters depending on the number of petitions.</string>
    <string name="txt_title_abuse">Don\'t use swear words and slang.</string>
    <string name="txt_description_abuse">The petition may be deleted by the administrator.</string>
    <string name="txt_description_others">Other contents inappropriate for dissemination of false information and disclosure to the information and communication network may be deleted without prior notice.</string>
    <string name="txt_title_notorious">Do not use hateful, violent, or suggestive expressions against a particular group.</string>
    <string name="txt_uploadPetition">Write petition</string>
    <string name="map_id">e0586c1ff834a705</string>
    <string name="txt_sports_inProcess">Under recruitment</string>
    <string name="txt_sports_inManagement">Managing Room</string>
    <string name="txt_selectDate">Select date and time</string>
    <string name="AddHandWriting_Header_Title">📝Posting Title</string>
    <string name="AddHandWriting_Title">Posting title</string>
    <string name="AddHandWriting_Header_examName">✏️ Test Name</string>
    <string name="AddHandWriting_examName">Test name</string>
    <string name="AddHandWriting_Header_examDate">🗓Test Date</string>
    <string name="AddHandWriting_Header_Meter">💭How did you prepare for the test?</string>
    <string name="AddHandWriting_Meter">How did you prepare for the test?</string>
    <string name="AddHandWriting_Header_Term">⏰ Test Preparation Period</string>
    <string name="AddHandWriting_Term">Test Preparation Period</string>
    <string name="AddHandWriting_Header_Review">🙋🏻 After taking the test</string>
    <string name="AddHandWriting_Review">After taking the test</string>
    <string name="AddHandWriting_Header_howTO">📚 Your own study method</string>
    <string name="AddHandWriting_howTO">Your own study method</string>
    <string name="AddHandWriting_Confirm">Upload</string>
    <string name="AddNotice_Title">Notice Title</string>
    <string name="AddNotice_Contents">Please enter the contents of the notice.</string>
    <string name="AddNotice_Upload">Upload</string>
    <string name="txt_description_duplicate">A duplicate petition can be combined into one.</string>
    <string name="txt_roomName">Room name</string>
    <string name="txt_sportsEvent">Sports Event</string>
    <string name="txt_allPeople">Full person (including yourself)</string>
    <string name="txt_currentPeople">Current person (including yourself)</string>
    <string name="txt_isOnline">Non-face-to-face progress</string>
    <string name="txt_selectLocation">Select location</string>
    <string name="txt_privacy_to_thirdParty">Provide third-party privacy</string>
    <string name="txt_privacy_to_thirdParty_contents">Provided information: Name, department, school number, contact\n Purpose: Identification and individual contact\nBy clicking the button below, you agree to provide the above information to a third party.</string>
    <string name="txt_warning_sports">The student council only serves as a relay in the recruitment process and is not responsible for any problems arising from the recruitment of mercenaries and the progression of sports.</string>
    <string name="txt_addSports_confirm">Apply for mercenary recruitment</string>
    <string name="txt_affiliates_categorySelection">Choose the category you want!</string>
    <string name="txt_all">All</string>
    <string name="txt_meal">Meal</string>
    <string name="txt_cafe">Cafe</string>
    <string name="txt_alcohol">Alcohol</string>
    <string name="txt_convenience">Convenience</string>
    <string name="txt_affiliates_queryHint">Search for affiliates with benefits!</string>
    <string name="txt_NUR">College of Nursing</string>
    <string name="txt_ENG">College of Engineering</string>
    <string name="txt_AGR">College of Agricultural Life Science</string>
    <string name="txt_COE">College of Education</string>
    <string name="txt_SOC">College of Social Sciences</string>
    <string name="txt_COM">College of Commerce</string>
    <string name="txt_CHE">College of Human Ecology</string>
    <string name="txt_ART">College of Arts</string>
    <string name="txt_COH">College of Humanities</string>
    <string name="txt_CON">College of Natural Science</string>
    <string name="txt_IKSAN">Specialized Campus</string>
    <string name="txt_Hospital">University Hospital</string>
    <string name="TXT_RESTAURANT">Restaurant</string>
    <string name="TXT_CAFE">Cafe</string>
    <string name="TXT_CONVENIENCESTORE">Convenience store</string>
    <string name="TXT_STUDY">Study</string>
    <string name="TXT_ATM">ATM</string>
    <string name="TXT_CHANGEPASSWORD">Change password</string>
    <string name="TXT_CONTENTS_CHANGEPASSWORD">Enter a new password in the field below.</string>
    <string name="TXT_HINT_NEWPASSWORD">New password</string>
    <string name="TXT_HINT_CONFIRMPASSWORD">Confirm password</string>
    <string name="TXT_CHANGEPHONE">Change Contact </string>
    <string name="TXT_CONTENTS_CHANGEPHONE">Enter the contact you want to change in the field below.</string>
    <string name="TXT_CONTENTS_CHECKEMAIL">Identification is required for security.\nPlease log in after setting the password in the entered e-mail.</string>
    <string name="TXT_TITLE_ANSWER">Answer to feedback.</string>
    <string name="TXT_HINT_FEEDBACK_ANSWER">Please enter your answer for feedback.</string>
    <string name="TXT_UPLOAD_ANSWER">Register your answer</string>
    <string name="TXT_FEEDBACK_CATEGORYSELECTION">Please select a category first.</string>
    <string name="TXT_TITLE_WRITE_FEEDBACKHUB">Please tell us your opinion.</string>
    <string name="TXT_FEEDBACKHUB_GOOD">Good</string>
    <string name="TXT_FEEDBACKHUB_IMPROVE">Improve</string>
    <string name="TXT_FEEDBACKHUB_QUESTION">Question</string>
    <string name="TXT_HINT_FEEDBACK_TITLE">Feedback Title</string>
    <string name="TXT_HINT_FEEDBACK_CONTENTS">Enter the contents of the feedback.</string>
    <string name="TXT_QUERYHINT_FEEDBACKHUB">Feedback Search</string>
    <string name="TXT_QUERYHINT_HANDWRITING">Search</string>
    <string name="TXT_HELLO">Hello</string>
    <string name="TXT_PETITION">Petition</string>
    <string name="TXT_FEEDBACK">Feedback</string>
    <string name="TXT_RENTAL">Rental Goods</string>
    <string name="TXT_PLEDGE">Pledge</string>
    <string name="TXT_HOME_HEADER_NOTICE">🔔 Latest Notice</string>
    <string name="TXT_HOME_HEADER_SPORTS">⚽ Shall we warm up with sports?</string>
    <string name="TXT_HOME_HEADER_PETITION">✨ What about this petition?</string>
    <string name="TXT_APPNAME">JBNU-CH</string>
    <string name="TXT_VERSION">Version :</string>
    <string name="TXT_BUILD">Build Number :</string>
    <string name="TXT_UPDATE">Update</string>
    <string name="TXT_READ_EULA">Read Service Terms and Conditions</string>
    <string name="TXT_READ_PRIVACYPOLICY">Read Privacy Policy</string>
    <string name="TXT_OPENSOURCE_LICENSE">Open Source License Information</string>
    <string name="TXT_COPYRIGHT">© 2022 Public Relations Department of Jeonbuk National University Student Association.</string>
    <string name="TXT_HEADER_INTRODUCE">Introduction to the student council</string>
    <string name="TXT_GREET">Greetings</string>
    <string name="TXT_WEBSITE">Student Council Site</string>
    <string name="TXT_YOUTUBE">Student Council YouTube</string>
    <string name="TXT_LINKTREE">Student Council Link Tree</string>
    <string name="TXT_OFFICE_LOCATION">Way to go</string>
    <string name="TXT_LICENSE_GREET">Hello!</string>
    <string name="TXT_LICENSE_CONTENTS">Please read and accept the terms and conditions to continue.</string>
    <string name="TXT_JINSOO">Jinsuwon</string>
    <string name="TXT_MEDICAL_RESTAURANT">Medical University Restaurant</string>
    <string name="TXT_CHAMBIT_RESTAURANT">Chambit</string>
    <string name="TXT_DORM_RESTAURANT">Dorm</string>
    <string name="TXT_DORM_IKSAN_RESTAURANT">Specialized Campus Dorm</string>
    <string name="TXT_ALL">All</string>
    <string name="TXT_AFFILIATE_POSITION_JBNU">JBNU</string>
    <string name="TXT_AFFILIATE_POSITION_OLD_TOWN">Old Town</string>
    <string name="TXT_AFFILIATE_POSITION_NEW_TOWN">New Town</string>
    <string name="TXT_AFFILIATE_POSITION_FAVORITE">Favorite</string>
</resources>