<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id = "@+id/menu_home"
        android:title = "@string/txt_home"
        android:icon = "@drawable/ic_home"/>

    <item
        android:id = "@+id/menu_affiliates"
        android:title = "@string/txt_affiliates"
        android:icon = "@drawable/ic_affiliates"/>

    <item
        android:id = "@+id/menu_timeTable"
        android:title = "@string/txt_timeTable"
        android:icon = "@drawable/ic_timetable"/>

    <item
        android:id = "@+id/menu_notice"
        android:title = "@string/txt_notice"
        android:icon = "@drawable/ic_notice"/>

    <item
        android:id = "@+id/menu_more"
        android:title = "@string/txt_more"
        android:icon = "@drawable/ic_more"/>

</menu>