<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="view"
            type="kr.ac.jbnu.ch.campusMap.view.CampusMapView" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id = "@+id/campusMapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.naver.maps.map.MapView
            android:id = "@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/scrollView_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <include
            layout = "@layout/toolbar"
            android:id = "@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <HorizontalScrollView
            android:id="@+id/scrollView_category"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/background"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
                android:id="@+id/toggleGroup_collegeCategory"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:tbgCheckedButton="@+id/btn_pledgeCategory_All">

                <com.nex3z.togglebuttongroup.button.LabelToggle
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:text="@string/txt_NUR"
                    android:textColor="@color/txtColor"
                    android:id="@+id/btn_collegeCategory_NUR"/>

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent"/>

                <com.nex3z.togglebuttongroup.button.LabelToggle
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/txt_ENG"
                    android:textColor="@color/txtColor"
                    android:id="@+id/btn_collegeCategory_ENG"/>

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent"/>

                <com.nex3z.togglebuttongroup.button.LabelToggle
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/txt_AGR"
                    android:textColor="@color/txtColor"
                    android:id="@+id/btn_collegeCategory_AGR"/>

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent"/>

                <com.nex3z.togglebuttongroup.button.LabelToggle
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:text="@string/txt_COE"
                    android:textColor="@color/txtColor"
                    android:id="@+id/btn_collegeCategory_COE"/>

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent"/>

                <com.nex3z.togglebuttongroup.button.LabelToggle
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/txt_SOC"
                    android:textColor="@color/txtColor"
                    android:id="@+id/btn_collegeCategory_SOC"/>

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent"/>

                <com.nex3z.togglebuttongroup.button.LabelToggle
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/txt_COM"
                    android:textColor="@color/txtColor"
                    android:id="@+id/btn_collegeCategory_COM"/>

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent"/>

                <com.nex3z.togglebuttongroup.button.LabelToggle
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/txt_CHE"
                    android:textColor="@color/txtColor"
                    android:id="@+id/btn_collegeCategory_CHE"/>

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent"/>

                <com.nex3z.togglebuttongroup.button.LabelToggle
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/txt_ART"
                    android:textColor="@color/txtColor"
                    android:id="@+id/btn_collegeCategory_ART"/>

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent"/>

                <com.nex3z.togglebuttongroup.button.LabelToggle
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/txt_COH"
                    android:textColor="@color/txtColor"
                    android:id="@+id/btn_collegeCategory_COH"/>

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent"/>

                <com.nex3z.togglebuttongroup.button.LabelToggle
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/txt_CON"
                    android:textColor="@color/txtColor"
                    android:id="@+id/btn_collegeCategory_CON"/>

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent"/>

                <com.nex3z.togglebuttongroup.button.LabelToggle
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/txt_IKSAN"
                    android:textColor="@color/txtColor"
                    android:id="@+id/btn_collegeCategory_IKSAN"/>

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent"/>

                <com.nex3z.togglebuttongroup.button.LabelToggle
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/txt_Hospital"
                    android:textColor="@color/txtColor"
                    android:id="@+id/btn_collegeCategory_Hospital"/>

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent"/>

                <com.nex3z.togglebuttongroup.button.LabelToggle
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/TXT_RESTAURANT"
                    android:textColor="@color/txtColor"
                    android:id="@+id/btn_collegeCategory_Restaurant"/>

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent"/>

                <com.nex3z.togglebuttongroup.button.LabelToggle
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/TXT_CAFE"
                    android:textColor="@color/txtColor"
                    android:id="@+id/btn_collegeCategory_Cafe"/>

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent"/>

                <com.nex3z.togglebuttongroup.button.LabelToggle
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/TXT_CONVENIENCESTORE"
                    android:textColor="@color/txtColor"
                    android:id="@+id/btn_collegeCategory_ConvenienceStore"/>

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent"/>

                <com.nex3z.togglebuttongroup.button.LabelToggle
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/TXT_STUDY"
                    android:textColor="@color/txtColor"
                    android:id="@+id/btn_collegeCategory_Study"/>

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent"/>

                <com.nex3z.togglebuttongroup.button.LabelToggle
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/TXT_ATM"
                    android:textColor="@color/txtColor"
                    android:id="@+id/btn_collegeCategory_ATM"/>

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent"/>

                <com.nex3z.togglebuttongroup.button.LabelToggle
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/txt_others"
                    android:textColor="@color/txtColor"
                    android:id="@+id/btn_collegeCategory_Others"/>

            </com.nex3z.togglebuttongroup.SingleSelectToggleGroup>

        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>