<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="view"
            type="kr.ac.jbnu.ch.userManagement.view.CheckEmailView" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:gravity="center"
        android:background="@color/background"
        android:orientation="vertical"
        android:weightSum="10">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:src = "@drawable/ic_email"
            app:tint="@color/accent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text = "@string/txt_checkEmail"
            android:textColor="@color/accent"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:text = "@string/TXT_CONTENTS_CHECKEMAIL"
            android:textColor="@color/gray"
            android:textSize="15sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_moveToSignIn"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:background="@drawable/theme_button"
            android:drawableEnd="@drawable/ic_chevron_right"
            android:drawablePadding="10dp"
            android:drawableTint="@color/white"
            android:elevation="15dp"
            android:onClick="@{(v) -> view.onClick(v)}"
            android:text="@string/txt_switchToSignIn"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_openEmail"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="#00FFFFFF"
            android:onClick="@{(v) -> view.onClick(v)}"
            android:text="@string/txt_openEmail"
            android:textColor="@color/accent" />

    </LinearLayout>

</layout>