<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <variable
            name="view"
            type="kr.ac.jbnu.ch.userManagement.view.LegacyUserView" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id = "@+id/legacyUserView"
        android:gravity="center"
        android:background="@color/background"
        android:weightSum="8"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="125dp"
            android:layout_height="0dp"
            android:layout_weight="1.4"
            android:elevation="1dp"
            app:cardCornerRadius="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="128dp"
                android:src = "@drawable/ic_legacy"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:layout_marginTop="15dp"
            android:text = "@string/txt_legacyUser_title"
            android:textColor="@color/txtColor"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:padding="20dp"
            android:text = "@string/txt_legacyUser_contents"
            android:textColor="@color/txtColor"
            android:textSize="15sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_transferData"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:background="@drawable/theme_button"
                android:drawableEnd="@drawable/ic_chevron_right"
                android:drawablePadding="10dp"
                android:drawableTint="@color/white"
                android:elevation="15dp"
                android:onClick="@{(v) -> view.onButtonClick(v)}"
                android:text="@string/txt_transferData"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_removeData"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:background="#00FFFFFF"
                android:onClick="@{(v) -> view.onButtonClick(v)}"
                android:text="@string/txt_removeData"
                android:textColor="@color/gray" />

        </LinearLayout>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/progressView"
            android:visibility="gone"
            android:indeterminate="true"/>


    </LinearLayout>

</layout>